--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.yeremy</groupId>
+    <groupId>org.yeremy</groupId>
     <artifactId>giftexchange</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
@@ -52,6 +52,11 @@
             <artifactId>springfox-swagger2</artifactId>
             <version>2.2.2</version>
             <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.ancestry.tuppence.discountmanager</groupId>
+            <artifactId>discount-manager-app</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
