Fixed pom and now code doesn't repeat gift sets for at least five years.

--- a/src/main/resources/loc.properties
+++ b/src/main/resources/loc.properties
@@ -1,1 +1,1 @@
-mysql.url=jdbc:mysql://localhost:3306/GiftExchange?connectTimeout=1000&socketTimeout=2000&useSSL=false&jdbcCompliantTruncation=false&rewriteBatchedStatements=true
+mysql.url=jdbc:mysql://localhost:3306/gift_exchange?connectTimeout=1000&socketTimeout=2000&useSSL=false&jdbcCompliantTruncation=false&rewriteBatchedStatements=true
